--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <h2><button onclick="window.location.href='./links/4.html'" target="_blank">Model 10</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/5.html'" target="_blank">Model 11</button></h2>
+            <h2><button onclick="window.location.href='./links/5.htm'" target="_blank">Model 11</button></h2>
         </div>
         <div class="portfolio-item">
             <h2><button onclick="window.location.href='./links/6.html'" target="_blank">Model 12</button></h2>
