--- a/index.html
+++ b/index.html
@@ -119,43 +119,43 @@
     </header>
     <div class="container">
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/ballBearing.html'" target="_blank">Model 1: Ball Bearing</button></h2>
+            <h2><button onclick="window.open('./links/ballBearing.html','blank')">Model 1: Ball Bearing</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/flangeCoupling.html'" target="_blank">Model 2: Flange Coupling</button></h2>
+            <h2><button onclick="window.open('./links/flangeCoupling.html','blank')">Model 2: Flange Coupling</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/hingeAssembly.html'" target="_blank">Model 3: Hinge Assembly</button></h2>
+            <h2><button onclick="window.open('./links/hingeAssembly.html','blank')">Model 3: Hinge Assembly</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/RoboticArm.html'" target="_blank">Model 4: Robotic Arm</button></h2>
+            <h2><button onclick="window.open('./links/RoboticArm.html','blank')">Model 4: Robotic Arm</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/ScrewScissorLiftMechanism.html'" target="_blank">Model 5: Screw Scissor Lift Mechanism</button></h2>
+            <h2><button onclick="window.open('./links/ScrewScissorLiftMechanism.html','blank')">Model 5: Screw Scissor Lift Mechanism</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/universalJoint.html'" target="_blank">Model 6: Universal Joint</button></h2>
+            <h2><button onclick="window.open('./links/universalJoint.html','blank')">Model 6: Universal Joint</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/1.html'" target="_blank">Model 7</button></h2>
+            <h2><button onclick="window.open('./links/1.html','blank')">Model 7</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/2.html'" target="_blank">Model 8</button></h2>
+            <h2><button onclick="window.open('./links/2.html','blank')">Model 8</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/3.html'" target="_blank">Model 9</button></h2>
+            <h2><button onclick="window.open('./links/3.html','blank')">Model 9</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/4.html'" target="_blank">Model 10</button></h2>
+            <h2><button onclick="window.open('./links/4.html','blank')">Model 10</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/5.htm'" target="_blank">Model 11</button></h2>
+            <h2><button onclick="window.open('./links/5.html','blank')">Model 11</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/6.html'" target="_blank">Model 12</button></h2>
+            <h2><button onclick="window.open('./links/6.html','blank')">Model 12</button></h2>
         </div>
         <div class="portfolio-item">
-            <h2><button onclick="window.location.href='./links/7.html'" target="_blank">Model 13</button></h2>
+            <h2><button onclick="window.open('./links/7.html','blank')">Model 13</button></h2>
         </div>
         
         <!-- Add more portfolio items here -->
